outputs/csi300-test/treevoo/2025-07-27_21-07-50/problem_iter9_response0.txt_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 14
    weights = [(df['close'] - df['open']) / df['close']].shift(i) for i in range(1, 6)]
                                                                                      ^
SyntaxError: unmatched ']'
